--- a/app/src/main/res/layout/history_content.xml
+++ b/app/src/main/res/layout/history_content.xml
@@ -61,7 +61,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
-                    android:text="Bakpia Test"
+                    android:text="Bakpia Store"
                     android:textColor="#000"
                     android:textSize="14sp"></TextView>
 
@@ -70,7 +70,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
-                    android:text="5 November 2019 TimeSta"
+                    android:text="5 November 2019"
                     android:textColor="#8E8888"
                     android:textSize="12sp"></TextView>
             </LinearLayout>
@@ -88,7 +88,7 @@
                     android:id="@+id/cardHistoryRupiah"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Rp1000000000"
+                    android:text="IDR 50000"
                     android:textAlignment="textEnd"
                     android:textColor="#000"
                     android:textSize="16sp"></TextView>
@@ -97,12 +97,11 @@
                     android:id="@+id/cardHistoryUsd"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="(usd 400)"
+                    android:text="USD 3.56"
                     android:textAlignment="textEnd"
                     android:textColor="#000"
                     android:textSize="12sp"></TextView>
             </LinearLayout>
-
 
         </android.support.constraint.ConstraintLayout>
 
