--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -207,27 +207,219 @@
                 android:textSize="20dp"
                 app:layout_constraintTop_toBottomOf="@+id/cardView2" />
 
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/recyclerView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
-                android:layout_marginBottom="20dp"
-                android:layout_marginTop="2dp"
-                android:paddingLeft="5dp"
-                app:layout_constraintTop_toBottomOf="@+id/textView3"
-                tools:layout_editor_absoluteX="16dp">
+            <HorizontalScrollView
+                android:id="@+id/HSVFavProfile"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/textView3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
 
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
 
-            </android.support.v7.widget.RecyclerView>
+                    <android.support.v7.widget.CardView
+                        android:layout_width="358dp"
+                        android:layout_height="115dp"
+                        android:layout_marginRight="10dp"
+                        android:background="@drawable/productimg1"
+                        app:cardCornerRadius="10dp">
+
+                        <ImageView
+                            android:id="@+id/recommendationsImg"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:scaleType="centerCrop"
+                            android:src="@drawable/bagstoreimg" />
+
+                        <android.support.constraint.ConstraintLayout
+                            android:layout_width="358dp"
+                            android:layout_height="118dp">
+
+                            <TextView
+                                android:id="@+id/recommendations_store"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_margin="10dp"
+                                android:fontFamily="@font/hind_bold"
+                                android:text="Bag Store"
+                                android:textColor="@color/colorWhite"
+                                android:textSize="18dp"
+                                app:layout_constraintBottom_toBottomOf="parent"
+                                app:layout_constraintStart_toStartOf="parent" />
+
+                            <android.support.constraint.ConstraintLayout
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginLeft="10dp"
+                                android:layout_marginBottom="15dp"
+                                android:orientation="horizontal"
+                                app:layout_constraintBottom_toBottomOf="parent"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintTop_toBottomOf="@+id/recommendations_store">
+
+                                <ImageView
+                                    android:id="@+id/imageView5"
+                                    android:layout_width="10dp"
+                                    android:layout_height="14dp"
+                                    android:src="@drawable/ic_locationicon"
+                                    app:layout_constraintBottom_toBottomOf="parent"
+                                    app:layout_constraintRight_toLeftOf="@id/textkm"
+                                    app:layout_constraintTop_toTopOf="parent" />
+
+                                <TextView
+                                    android:id="@+id/textkm"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:paddingLeft="2dp"
+                                    android:text="3.21 km"
+                                    android:textColor="#fff"
+                                    android:textSize="10dp"
+                                    app:layout_constraintBottom_toBottomOf="parent"
+                                    app:layout_constraintEnd_toEndOf="parent"
+                                    app:layout_constraintTop_toTopOf="parent" />
+
+                            </android.support.constraint.ConstraintLayout>
+                        </android.support.constraint.ConstraintLayout>
+                    </android.support.v7.widget.CardView>
+
+                    <android.support.v7.widget.CardView
+                        android:layout_width="358dp"
+                        android:layout_height="115dp"
+                        android:layout_marginRight="10dp"
+                        android:background="@drawable/productimg1"
+                        app:cardCornerRadius="10dp">
+
+                        <ImageView
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:scaleType="centerCrop"
+                            android:src="@drawable/craftstoreimg" />
+
+                        <android.support.constraint.ConstraintLayout
+                            android:layout_width="358dp"
+                            android:layout_height="118dp">
+
+                            <TextView
+                                android:id="@+id/recommendations_store1"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_margin="10dp"
+                                android:fontFamily="@font/hind_bold"
+                                android:text="Souvernirs Store"
+                                android:textColor="@color/colorWhite"
+                                android:textSize="18dp"
+                                app:layout_constraintBottom_toBottomOf="parent"
+                                app:layout_constraintStart_toStartOf="parent" />
+
+                            <android.support.constraint.ConstraintLayout
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginLeft="10dp"
+                                android:layout_marginBottom="15dp"
+                                android:orientation="horizontal"
+                                app:layout_constraintBottom_toBottomOf="parent"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintTop_toBottomOf="@+id/recommendations_store1">
+
+                                <ImageView
+                                    android:layout_width="10dp"
+                                    android:layout_height="14dp"
+                                    android:src="@drawable/ic_locationicon"
+                                    app:layout_constraintBottom_toBottomOf="parent"
+                                    app:layout_constraintRight_toLeftOf="@id/textkm1"
+                                    app:layout_constraintTop_toTopOf="parent" />
+
+                                <TextView
+                                    android:id="@+id/textkm1"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:paddingLeft="2dp"
+                                    android:text="3.21 km"
+                                    android:textColor="#fff"
+                                    android:textSize="10dp"
+                                    app:layout_constraintBottom_toBottomOf="parent"
+                                    app:layout_constraintEnd_toEndOf="parent"
+                                    app:layout_constraintTop_toTopOf="parent" />
+
+                            </android.support.constraint.ConstraintLayout>
+                        </android.support.constraint.ConstraintLayout>
+                    </android.support.v7.widget.CardView>
+
+                    <android.support.v7.widget.CardView
+                        android:layout_width="358dp"
+                        android:layout_height="115dp"
+                        android:layout_marginRight="10dp"
+                        android:background="@drawable/productimg1"
+                        app:cardCornerRadius="10dp">
+
+                        <ImageView
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:scaleType="centerCrop"
+                            android:src="@drawable/favimg1" />
+
+                        <android.support.constraint.ConstraintLayout
+                            android:layout_width="358dp"
+                            android:layout_height="118dp">
+
+                            <TextView
+                                android:id="@+id/recommendations_store2"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_margin="10dp"
+                                android:fontFamily="@font/hind_bold"
+                                android:text="Souvernirs Store"
+                                android:textColor="@color/colorWhite"
+                                android:textSize="18dp"
+                                app:layout_constraintBottom_toBottomOf="parent"
+                                app:layout_constraintStart_toStartOf="parent" />
+
+                            <android.support.constraint.ConstraintLayout
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginLeft="10dp"
+                                android:layout_marginBottom="15dp"
+                                android:orientation="horizontal"
+                                app:layout_constraintBottom_toBottomOf="parent"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintTop_toBottomOf="@+id/recommendations_store2">
+
+                                <ImageView
+                                    android:layout_width="10dp"
+                                    android:layout_height="14dp"
+                                    android:src="@drawable/ic_locationicon"
+                                    app:layout_constraintBottom_toBottomOf="parent"
+                                    app:layout_constraintRight_toLeftOf="@id/textkm2"
+                                    app:layout_constraintTop_toTopOf="parent" />
+
+                                <TextView
+                                    android:id="@+id/textkm2"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:paddingLeft="2dp"
+                                    android:text="3.21 km"
+                                    android:textColor="#fff"
+                                    android:textSize="10dp"
+                                    app:layout_constraintBottom_toBottomOf="parent"
+                                    app:layout_constraintEnd_toEndOf="parent"
+                                    app:layout_constraintTop_toTopOf="parent" />
+
+                            </android.support.constraint.ConstraintLayout>
+                        </android.support.constraint.ConstraintLayout>
+                    </android.support.v7.widget.CardView>
+
+                </LinearLayout>
+
+            </HorizontalScrollView>
+
 
             <android.support.v7.widget.CardView
                 android:id="@+id/btLogOut"
                 android:layout_width="match_parent"
                 android:padding="10dp"
                 android:layout_height="37dp"
-                app:layout_constraintTop_toBottomOf="@+id/recyclerView"
+                app:layout_constraintBottom_toTopOf="@+id/HSVFavProfile"
                 android:layout_marginTop="20dp">
 
                 <TextView
