--- a/app/src/main/res/layout/fragment_feeds.xml
+++ b/app/src/main/res/layout/fragment_feeds.xml
@@ -204,7 +204,7 @@
 
                             <TextView
                                 android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
+                                android:layout_height="38dp"
                                 android:layout_marginLeft="55dp"
                                 android:text="Penjualnya ramah sekali, harga tasnya murah-murah"
                                 android:textColor="#000"
