--- a/app/src/main/res/layout/fragment_feeds.xml
+++ b/app/src/main/res/layout/fragment_feeds.xml
@@ -12,6 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <ScrollView
+            android:paddingBottom="50dp"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
@@ -149,6 +150,7 @@
                 </LinearLayout>
                 <LinearLayout
                     android:padding="20dp"
+                    android:layout_marginBottom="70dp"
                     android:layout_margin="20dp"
                     android:background="@color/colorWhite"
                     android:id="@+id/linearLayout5"
@@ -203,10 +205,10 @@
                             app:layout_constraintTop_toBottomOf="@+id/linearLayout4">
 
                             <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="38dp"
+                                android:layout_width="272dp"
+                                android:layout_height="45dp"
                                 android:layout_marginLeft="55dp"
-                                android:text="Penjualnya ramah sekali, harga tasnya murah-murah"
+                                android:text="Barangnya murah"
                                 android:textColor="#000"
                                 android:textSize="13dp" />
 
@@ -232,7 +234,7 @@
             android:layout_height="wrap_content"
             android:clickable="true"
             android:backgroundTint="#2482CA"
-            android:layout_marginBottom="80dp"
+            android:layout_marginBottom="50dp"
             android:layout_marginRight="25dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
