--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -73,6 +73,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
+                android:scrollbars="none"
                 android:layout_marginBottom="20dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/homeLLSearch">
@@ -347,6 +348,7 @@
 
                 <HorizontalScrollView
                     android:layout_width="wrap_content"
+                    android:scrollbars="none"
                     android:layout_height="wrap_content">
 
                     <LinearLayout
@@ -503,6 +505,7 @@
 
                 <HorizontalScrollView
                     android:layout_width="wrap_content"
+                    android:scrollbars="none"
                     android:layout_height="wrap_content">
 
                     <LinearLayout
@@ -714,6 +717,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
                 android:text="For You"
+                android:fontFamily="@font/hind_bold"
                 android:textColor="#000000"
                 android:textSize="18dp"
                 android:textStyle="bold" />
@@ -724,18 +728,19 @@
                 android:layout_marginLeft="20dp"
                 android:layout_height="match_parent"
                 android:layout_marginRight="20dp"
+                android:paddingBottom="70dp"
                 android:orientation="vertical">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
+                    android:gravity="center"
                     android:layout_marginTop="10dp">
                     <android.support.v7.widget.CardView
-                        android:layout_marginBottom="10dp"
                         app:cardCornerRadius="10dp"
                         android:background="@drawable/productimg1"
-                        android:layout_width="181dp"
+                        android:layout_width="170dp"
                         android:layout_height="230dp">
                         <ImageView
                             android:layout_width="match_parent"
@@ -792,13 +797,65 @@
                                     app:layout_constraintTop_toTopOf="parent" />
 
                             </android.support.constraint.ConstraintLayout>
+
+                            <android.support.constraint.ConstraintLayout
+                                android:layout_width="181dp"
+                                android:layout_height="230dp"
+                                tools:layout_editor_absoluteX="-2dp"
+                                tools:layout_editor_absoluteY="90dp">
+
+                                <TextView
+                                    android:id="@+id/voucher_contentDiscount2"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_margin="10dp"
+                                    android:fontFamily="@font/hind_bold"
+                                    android:text="Souvernirs Store"
+                                    android:textColor="@color/colorWhite"
+                                    android:textSize="18dp"
+                                    app:layout_constraintBottom_toBottomOf="parent"
+                                    app:layout_constraintStart_toStartOf="parent" />
+
+                                <android.support.constraint.ConstraintLayout
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginLeft="10dp"
+                                    android:layout_marginBottom="15dp"
+                                    android:orientation="horizontal"
+                                    app:layout_constraintBottom_toBottomOf="parent"
+                                    app:layout_constraintStart_toStartOf="parent"
+                                    app:layout_constraintTop_toBottomOf="@+id/voucher_contentDiscount2">
+
+                                    <ImageView
+                                        android:id="@+id/imageViewDiscount2"
+                                        android:layout_width="10dp"
+                                        android:layout_height="14dp"
+                                        android:src="@drawable/ic_locationicon"
+                                        app:layout_constraintBottom_toBottomOf="parent"
+                                        app:layout_constraintStart_toStartOf="parent"
+                                        app:layout_constraintTop_toTopOf="parent" />
+
+                                    <TextView
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:paddingLeft="2dp"
+                                        android:text="3.21 km"
+                                        android:textColor="#fff"
+                                        android:textSize="10dp"
+                                        app:layout_constraintBottom_toBottomOf="parent"
+                                        app:layout_constraintEnd_toEndOf="parent"
+                                        app:layout_constraintStart_toEndOf="@+id/imageViewDiscount2"
+                                        app:layout_constraintTop_toTopOf="parent" />
+
+                                </android.support.constraint.ConstraintLayout>
+                            </android.support.constraint.ConstraintLayout>
                         </android.support.constraint.ConstraintLayout>
                     </android.support.v7.widget.CardView>
                     <android.support.v7.widget.CardView
                         app:cardCornerRadius="10dp"
                         android:layout_marginLeft="8dp"
                         android:background="@drawable/productimg1"
-                        android:layout_width="181dp"
+                        android:layout_width="170dp"
                         android:layout_height="230dp">
                         <ImageView
                             android:layout_width="match_parent"
@@ -860,32 +917,32 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:layout_marginBottom="20dp"
+                    android:gravity="center"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     android:layout_marginTop="10dp">
                     <android.support.v7.widget.CardView
-                        android:layout_marginBottom="20dp"
                         app:cardCornerRadius="10dp"
                         android:background="@drawable/productimg1"
-                        android:layout_width="181dp"
+                        android:layout_width="170dp"
                         android:layout_height="230dp">
                         <ImageView
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:scaleType="fitXY"
                             android:src="@drawable/foryou3img"/>
-
                         <android.support.constraint.ConstraintLayout
                             android:layout_width="181dp"
                             android:layout_height="230dp">
 
                             <TextView
-                                android:id="@+id/voucher_contentDiscount2"
+                                android:id="@+id/voucher_contentDiscount4"
                                 app:layout_constraintStart_toStartOf="parent"
                                 app:layout_constraintBottom_toBottomOf="parent"
                                 android:layout_width="wrap_content"
-                                android:text="Souvernirs Store"
+                                android:text="Fashion"
                                 android:textColor="@color/colorWhite"
                                 android:fontFamily="@font/hind_bold"
                                 android:layout_margin="10dp"
@@ -900,10 +957,10 @@
                                 android:orientation="horizontal"
                                 app:layout_constraintBottom_toBottomOf="parent"
                                 app:layout_constraintStart_toStartOf="parent"
-                                app:layout_constraintTop_toBottomOf="@+id/voucher_contentDiscount2">
+                                app:layout_constraintTop_toBottomOf="@+id/voucher_contentDiscount4">
 
                                 <ImageView
-                                    android:id="@+id/imageViewDiscount2"
+                                    android:id="@+id/imageVie7"
                                     android:layout_width="10dp"
                                     android:layout_height="14dp"
                                     android:src="@drawable/ic_locationicon"
@@ -920,17 +977,19 @@
                                     android:textSize="10dp"
                                     app:layout_constraintBottom_toBottomOf="parent"
                                     app:layout_constraintEnd_toEndOf="parent"
-                                    app:layout_constraintStart_toEndOf="@+id/imageViewDiscount2"
+                                    app:layout_constraintStart_toEndOf="@+id/imageVie7"
                                     app:layout_constraintTop_toTopOf="parent" />
 
                             </android.support.constraint.ConstraintLayout>
                         </android.support.constraint.ConstraintLayout>
+
+
                     </android.support.v7.widget.CardView>
                     <android.support.v7.widget.CardView
                         app:cardCornerRadius="10dp"
                         android:layout_marginLeft="8dp"
                         android:background="@drawable/productimg1"
-                        android:layout_width="181dp"
+                        android:layout_width="170dp"
                         android:layout_height="230dp">
                         <ImageView
                             android:layout_width="match_parent"
