--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -208,6 +208,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/cardView2" />
 
             <HorizontalScrollView
+                android:layout_marginLeft="20dp"
                 android:id="@+id/HSVFavProfile"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/textView3"
@@ -418,8 +419,8 @@
                 android:id="@+id/btLogOut"
                 android:layout_width="match_parent"
                 android:padding="10dp"
-                android:layout_height="37dp"
-                app:layout_constraintBottom_toTopOf="@+id/HSVFavProfile"
+                android:layout_height="50dp"
+                app:layout_constraintTop_toBottomOf="@+id/HSVFavProfile"
                 android:layout_marginTop="20dp">
 
                 <TextView
